--- a/index.html
+++ b/index.html
@@ -48,3 +48,14 @@
   </div> <!-- closes card div -->
   </body>
 </html>
+
+<!-- 📊 Data Storytelling Project Card -->
+  <p class="text-sm text-gray-600 mt-2">
+    Today I found out that my (insert animal) (lives, eats, etc) in the (x) through Python Data Science analysis in Google Colab!
+  </p>
+  <div class="mt-4 flex gap-3">
+    <a href="YOUR_COLAB_NOTEBOOK_LINK"
+       target="_blank"
+       class="rounded-lg bg-blue-600 px-20 py-2 text-white hover:bg-blue-700 transition">
+      🔗 Open Notebook
+  </div>
